ENH:  ScrollBar Color
Change-Id: Ice87a8ddae0ccadaa63652bb4fa8464c4bee408f
(cherry picked from commit 5db33442578ac72433131229889cc1055527de74)

--- a/resources/web/guide/21/index.html
+++ b/resources/web/guide/21/index.html
@@ -19,7 +19,7 @@
 <div id="Title">
 	<div class="trans" tid="t10">Printer Selection</div>
 </div>
-<div id="Content">
+<div id="Content"  class="ZScrol">
 
 <!--<div class="OneVendorBlock" Vendor="BBL">	
 <div class="BlockBanner">
