--- a/resources/web/guide/23/index.html
+++ b/resources/web/guide/23/index.html
@@ -67,7 +67,7 @@
 	<div class="SmallBtn trans" tid="t12" onClick="SelectAllFilament(0)">Clear all</div>
 </div>	
 	
-<div id="ItemBlockArea">	
+<div id="ItemBlockArea" class="ZScrol">	
 <!--	<div class="MItem"><input type="checkbox" vendor=""  filatype="" model="ALL PLA EXPSilk" name="" />ALL PLA EXPSilk</div>
 	<div class="MItem"><input type="checkbox" />ALL PLA Silk</div>
 	<div class="MItem"><input type="checkbox" />BBL PA-CF</div>	
