--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -51,13 +51,13 @@
 <div id="ContentBoard" class="ZScrol" board="recent">
     <div style="height: 14px;"></div>	
 	<div id="MenuArea">
-		<div class="MenuItem" onClick="OnClickModelDepot()">
+<!--		<div class="MenuItem" onClick="OnClickModelDepot()">
 			<div class="MenuIcon"><img src="img/i6.png"></div>
 			<div>
 				<div class="trans TextS1" tid="t90">3D Model</div>
 				<div class="MenuDesc trans"  tid="t91">Download 3D Models</div>
 			</div>
-		</div>		
+		</div>	-->	
 		<div class="MenuItem" onClick="OnClickNewProject()">
 			<div class="MenuIcon"><img src="img/i4.png"></div>
 			<div>
